# LSH_project

./: .gitignore  CMakeLists.txt  cmake.sh  make.sh
common/: device_picker.hpp  err_code.h  wtime.c
demo/: CMakeLists.txt  Jsim.cpp  LSH.cpp  minHash_Similarity.cpp  write_sim.cl
documents/Cherub/: Cherub.txt  Cherub_permuta_1.txt  Cherub_permuta_10.txt  Cherub_permuta_2.txt  Cherub_permuta_3.txt  Cherub_permuta_4.txt  Cherub_permuta_5.txt  Cherub_permuta_6.txt  Cherub_permuta_7.txt  Cherub_permuta_8.txt  Cherub_permuta_9.txt
documents/Pillars_of_the_Earth/: Pillars_of_the_Earth.txt  Pillars_of_the_Earth_permuta_1.txt  Pillars_of_the_Earth_permuta_10.txt  Pillars_of_the_Earth_permuta_2.txt  Pillars_of_the_Earth_permuta_3.txt  Pillars_of_the_Earth_permuta_4.txt  Pillars_of_the_Earth_permuta_5.txt  Pillars_of_the_Earth_permuta_6.txt  Pillars_of_the_Earth_permuta_7.txt  Pillars_of_the_Earth_permuta_8.txt  Pillars_of_the_Earth_permuta_9.txt
src/: CMakeLists.txt  characteristic_matrix.cpp  characteristic_matrix.h  clear_buffer.cl  compute_cm.cl  generate_shingles.cl  hash_shingles.cl  minhash_signature.cpp  minhash_signature.h
